--- a/Pizza Portuguesa/19.html
+++ b/Pizza Portuguesa/19.html
@@ -16,7 +16,7 @@
             }
         }
 
-        document.write("A soma dos números positivos de 0 a 100 é: " + r);
+        document.write("A soma dos números positivos pares de 0 a 100 é: " + r);
 
     </script>
 </body>
